{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 54,
  "lineage": "3fd06bb0-544b-61ea-9432-8018a002a5b6",
  "resources": [
    {
      "module": "module.aws_wordpress",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "module.aws_wordpress.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06fcce4c1f1fd5620",
            "association_id": "eipassoc-035992b44129f5840",
            "domain": "vpc",
            "id": "eipalloc-06fcce4c1f1fd5620",
            "instance": "i-06d154181abdd4a67",
            "network_border_group": "us-east-2",
            "network_interface": "eni-088c90d670f92c84b",
            "private_dns": "ip-10-0-1-163.us-east-2.compute.internal",
            "private_ip": "10.0.1.163",
            "public_dns": "ec2-3-128-216-102.us-east-2.compute.amazonaws.com",
            "public_ip": "3.128.216.102",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.aws_wordpress.aws_db_instance.wordpressdb",
            "module.aws_wordpress.aws_db_subnet_group.RDS_subnet_grp",
            "module.aws_wordpress.aws_instance.wordpressec2",
            "module.aws_wordpress.aws_key_pair.mykey-pair",
            "module.aws_wordpress.aws_security_group.RDS_allow_rule",
            "module.aws_wordpress.aws_security_group.ec2_allow_rule",
            "module.aws_wordpress.aws_subnet.prod-subnet-private-1",
            "module.aws_wordpress.aws_subnet.prod-subnet-private-2",
            "module.aws_wordpress.aws_subnet.prod-subnet-public-1",
            "module.aws_wordpress.aws_vpc.prod-vpc",
            "module.aws_wordpress.data.aws_ami.linux2",
            "module.aws_wordpress.data.aws_ami.ubuntu",
            "module.aws_wordpress.data.template_file.user_data"
          ]
        }
      ]
    },
    {
      "module": "module.aws_wordpress",
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpressec2",
      "provider": "module.aws_wordpress.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0066d036f9777ec38",
            "arn": "arn:aws:ec2:us-east-2:663466631530:instance/i-06d154181abdd4a67",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06d154181abdd4a67",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-088c90d670f92c84b",
            "private_dns": "ip-10-0-1-163.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.163",
            "public_dns": "ec2-3-128-216-102.us-east-2.compute.amazonaws.com",
            "public_ip": "3.128.216.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0430369e422bab9e7",
                "volume_size": 22,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c1a3d6dbe037469d",
            "tags": {
              "Name": "Wordpress.web"
            },
            "tags_all": {
              "Name": "Wordpress.web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01b459c821aac58a2"
            ]
          },
          "dependencies": [
            "module.aws_wordpress.aws_db_instance.wordpressdb",
            "module.aws_wordpress.aws_db_subnet_group.RDS_subnet_grp",
            "module.aws_wordpress.aws_key_pair.mykey-pair",
            "module.aws_wordpress.aws_security_group.RDS_allow_rule",
            "module.aws_wordpress.aws_security_group.ec2_allow_rule",
            "module.aws_wordpress.aws_subnet.prod-subnet-private-1",
            "module.aws_wordpress.aws_subnet.prod-subnet-private-2",
            "module.aws_wordpress.aws_subnet.prod-subnet-public-1",
            "module.aws_wordpress.aws_vpc.prod-vpc",
            "module.aws_wordpress.data.aws_ami.linux2",
            "module.aws_wordpress.data.aws_ami.ubuntu",
            "module.aws_wordpress.data.template_file.user_data"
          ]
        }
      ]
    },
    {
      "module": "module.aws_wordpress",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod-igw",
      "provider": "module.aws_wordpress.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:663466631530:internet-gateway/igw-0016a799948ab6b33",
            "id": "igw-0016a799948ab6b33",
            "owner_id": "663466631530",
            "vpc_id": "vpc-0da116eb534800888"
          },
          "dependencies": [
            "module.aws_wordpress.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_wordpress",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-public-crt",
      "provider": "module.aws_wordpress.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:663466631530:route-table/rtb-07490ace2e6648a8e",
            "id": "rtb-07490ace2e6648a8e",
            "owner_id": "663466631530",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0016a799948ab6b33",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0da116eb534800888"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_wordpress.aws_internet_gateway.prod-igw",
            "module.aws_wordpress.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_wordpress",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-crta-public-subnet-1",
      "provider": "module.aws_wordpress.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c86edabc1d6dadb",
            "route_table_id": "rtb-07490ace2e6648a8e",
            "subnet_id": "subnet-0c1a3d6dbe037469d"
          },
          "dependencies": [
            "module.aws_wordpress.aws_internet_gateway.prod-igw",
            "module.aws_wordpress.aws_route_table.prod-public-crt",
            "module.aws_wordpress.aws_subnet.prod-subnet-public-1",
            "module.aws_wordpress.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_wordpress",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "RDS_allow_rule",
      "provider": "module.aws_wordpress.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:663466631530:security-group/sg-0fe1a46aa648380a7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe1a46aa648380a7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01b459c821aac58a2"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20221110135832312300000003",
            "name_prefix": "terraform-",
            "owner_id": "663466631530",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow ec2"
            },
            "tags_all": {
              "Name": "allow ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da116eb534800888"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_wordpress.aws_security_group.ec2_allow_rule",
            "module.aws_wordpress.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_wordpress",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_allow_rule",
      "provider": "module.aws_wordpress.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:663466631530:security-group/sg-01b459c821aac58a2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b459c821aac58a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MYSQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20221110135828340500000001",
            "name_prefix": "terraform-",
            "owner_id": "663466631530",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow ssh,http,https"
            },
            "tags_all": {
              "Name": "allow ssh,http,https"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da116eb534800888"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_wordpress.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_wordpress",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-private-1",
      "provider": "module.aws_wordpress.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:663466631530:subnet/subnet-00ba9192349b3ef86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ba9192349b3ef86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "663466631530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0da116eb534800888"
          },
          "dependencies": [
            "module.aws_wordpress.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_wordpress",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-private-2",
      "provider": "module.aws_wordpress.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:663466631530:subnet/subnet-0638a39b92b4a7d0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0638a39b92b4a7d0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "663466631530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0da116eb534800888"
          },
          "dependencies": [
            "module.aws_wordpress.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_wordpress",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-public-1",
      "provider": "module.aws_wordpress.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:663466631530:subnet/subnet-0c1a3d6dbe037469d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1a3d6dbe037469d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "663466631530",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0da116eb534800888"
          },
          "dependencies": [
            "module.aws_wordpress.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_wordpress",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod-vpc",
      "provider": "module.aws_wordpress.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:663466631530:vpc/vpc-0da116eb534800888",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c2d93341e8da9a2a",
            "default_route_table_id": "rtb-09cb7a1331d846b93",
            "default_security_group_id": "sg-02066a9131552f136",
            "dhcp_options_id": "dopt-0ba4656a986b3aa89",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0da116eb534800888",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09cb7a1331d846b93",
            "owner_id": "663466631530"
          }
        }
      ]
    }
  ]
}